Issue #28408: Fixed a leak and remove redundant code in _PyUnicodeWriter_Finish(). Patch by Xiang Zhang.